# quiver

./: .gitignore  CLAUDE.md  README.md  _quarto.yml  index.qmd  justfile  pyproject.toml
lessons/complexity-theory/: index.qmd
lessons/foundations/: index.qmd
lessons/foundations/bayes-theorem,/: lesson.hs  lesson.qmd
lessons/foundations/device-id-capstone/: lesson.py
lessons/foundations/kolmogorov/: lesson.hs  lesson.py  lesson.qmd
lessons/foundations/kolmogorov/exports/: lesson-hs.tex  lesson-py.tex
lessons/foundations/probability/: lesson.hs  lesson.py  lesson.qmd
lessons/ml/: index.qmd
lessons/network-theory/: index.qmd
